--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thoward/collection",
+    "name": "projx-io/collections",
     "authors": [
         {
             "name": "Terrence Howard",
