--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - composer install
 
 script:
-  - ant
+  - ant phpunit
 
 after_success:
   - composer require satooshi/php-coveralls
