--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: php
 
 php:
-  - 5.4
+#  - 5.4
   - 5.5
   - 5.6
   - 7.0
@@ -12,7 +12,7 @@ before_script:
   - composer install
 
 script:
-  - ant phpunit
+  - ant
 
 after_success:
   - composer require satooshi/php-coveralls
