--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,23 @@
 language: php
 
 php:
-  - 5.4
+#  - 5.4
   - 5.5
   - 5.6
   - 7.0
   - hhvm
   - nightly
 
+cache:
+  directories:
+    - $HOME/.composer
+
 before_script:
   - composer install
 
 script:
-  - ant phpunit
+  - ant
 
 after_success:
   - composer require satooshi/php-coveralls
-  - travis_retry php vendor/bin/coveralls -v
+  - travis_retry php vendor/bin/coveralls -v --coverage_clover ./build/coverage/clover.xml
